--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,16 @@
   <img width="300" alt="Angular Logo" src="http://ponyracer.ninja-squad.com/assets/images/pony-yellow-rainbow.gif">
 </div>
 <hr />
-<app-race></app-race>
+<button type="button"
+        class="btn"
+        routerLink="home">
+        Home
+</button>
+&nbsp;
+<button type="button"
+        class="btn"
+        routerLink="race">
+        Race
+</button>
+<hr />
+<router-outlet></router-outlet>
