--- a/src/app/components/race/race.component.html
+++ b/src/app/components/race/race.component.html
@@ -7,7 +7,7 @@
     (win)="handlewin($event)"
     (click)="handleclick(i)">
     
-    <span *ngIf="p.id === winningPoneyId">ddddd</span>
+    <!-- span *ngIf="p.id === winningPoneyId">ddddd</span -->
   </app-poney>
   <hr />
 </span>
