--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,9 +14,15 @@
 </button>
 &nbsp;
 <button type="button"
-        class="btn"
+        class="btn btn-success"
         routerLink="race">
         Race
+</button>
+&nbsp;
+<button type="button"
+        class="btn btn-warning"
+        routerLink="create-race">
+        Create Race
 </button>
 <hr />
 <router-outlet></router-outlet>
