--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
 <ul>
   <li *ngFor="let race of races$ | async">
-      <a type="button"
-      class="btn btn-secondary"
+      <button type="button"
+      class="btn btn-outline-primary"
       [routerLink]="['/race', race.id]">
       {{race.name}}
-  </a>
+  </button>
   </li>
 </ul>
